[package]
name = "stackmap-wmts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
#axum = "0.6.18"
#env_logger = "0.10.0"
#lockfile = "0.4.0"
log = "0.4.17"
#qstring = "0.7.2"
reqwest = "0.11.17"
#serde = "1.0.160"
#serde_derive = "1.0.160"
serde_qs = "0.12.0"
tile-grid = "0.3.0"
tokio = "1.28.0"
url = "2.3.1"
