[package]
name = "stackmap-wmts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.17"
reqwest = "0.11.17"
serde_qs = "0.12.0"
tile-grid = "0.3.0"
tokio = "1.28.0"
url = "2.3.1"
chrono = "0.2.16"
